Fixed the problem related to the cors blockers